test/official_tests/variable/use_local_in_initializer.lox
var a = "outer";
{
  var a = a; // error: {"line":3,"message":"Can't read local variable in its own initializer","type":"RuntimeError"}
}
